<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory
        app:title="@string/Skin"
        app:key="skins">

        <ListPreference
            android:defaultValue="@string/default_table_file"
            android:entries="@array/table_entries"
            android:entryValues="@array/table_entries_values"
            android:key="@string/tables_key"
            android:summary="@string/summary_table"
            android:title="@string/tables_title"
            app:persistent="true"/>

        <ListPreference
            android:key="@string/rackets_key"
            android:title="@string/rackets_title"
            app:persistent="true"
            android:defaultValue="@string/default_racket_file"
            android:entries="@array/racket_entries"
            android:entryValues="@array/racket_entries_values"
            app:summary="@string/summary_rackets" />

        <ListPreference
            android:title="@string/ball_setting_title"
            app:key="@string/balls_key"
            app:persistent="true"
            android:defaultValue="@string/ball_default_name_file"
            android:entries="@array/ball_entries"
            android:entryValues="@array/ball_entries_values"
            app:summary="@string/summary_ball" />

    </PreferenceCategory>

</PreferenceScreen>