<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="it.sapienza.mobileproject.fragments.HomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_friendsFragment"
            app:destination="@id/friendsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_shopFragment"
            app:destination="@id/shopFragment" />
        <action
            android:id="@+id/action_homeFragment_to_statsFragment"
            app:destination="@id/statsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/friendsFragment"
        android:name="it.sapienza.mobileproject.fragments.FriendsFragment"
        android:label="@string/friends"
        tools:layout="@layout/fragment_friends" />
    <fragment
        android:id="@+id/shopFragment"
        android:name="it.sapienza.mobileproject.fragments.ShopFragment"
        android:label="@string/shop"
        tools:layout="@layout/fragment_shop" />
    <fragment
        android:id="@+id/statsFragment"
        android:name="it.sapienza.mobileproject.fragments.StatsFragment"
        android:label="Statistic"
        tools:layout="@layout/fragment_stats" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="it.sapienza.mobileproject.fragments.ProfileFragment"
        android:label="My Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="it.sapienza.mobileproject.fragments.SettingsFragment"
        android:label="@string/settings" />

</navigation>